--- a/.config/dein/dein.toml
+++ b/.config/dein/dein.toml
@@ -1,16 +1,6 @@
 [[plugins]]
 repo = 'Shougo/dein.vim'
 
-# [[plugins]]
-# repo = 'altercation/vim-colors-solarized'
-# hook_add = '''
-#     set t_Co=256
-#     syntax enable
-#     let g:solarized_termtrans = 1
-#     let g:solarized_termcolors=256
-#     set background=dark
-#     colorscheme solarized '''
-
 [[plugins]]
 repo = 'kristijanhusak/vim-hybrid-material'
 hook_add = '''
@@ -80,12 +70,6 @@ call denite#custom#var('grep', 'recursive_opts', [])
 
 [[plugins]]
 repo = 'airblade/vim-gitgutter'
-hook_add = '''
-    au VimEnter * GitGutter
-'''
-hook_source = '''
-    let g:gitgutter_enable = 1
-'''
     
 [[plugins]]
 repo = 'vim-airline/vim-airline'
@@ -178,3 +162,10 @@ hook_source = '''
 \ }
 '''
 
+[[plugins]]
+repo = 'jsfaint/gen_tags.vim'
+on_ft = 'python'
+hook_post_source = '''
+    let g:gen_tags#ctags_auto_gen = 1
+    let g:gen_tags#gtags_auto_gen = 1
+'''
